--- a/elephant-samurai/package.json
+++ b/elephant-samurai/package.json
@@ -23,10 +23,14 @@
     "@vitejs/plugin-react-swc": "^4.1.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.36.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
+    "prettier": "3.6.2",
     "tailwindcss": "^4.1.16",
     "vite": "^7.1.7"
   }
